--- a/.config/i3/config
+++ b/.config/i3/config
@@ -43,9 +43,12 @@ exec xinput set-prop 10 346 1
 exec xinput set-prop 10 318 1
 exec xinput set-prop 10 319 1
 
-# Scrolling speed reduice 
+# Scrolling speed reduce 
 exec xinput set-prop 10 342 50
 exec xinput set-prop 10 343 50
+
+# hides the mouse after 1 second
+exec unclutter --timeout 1 --jitter 50 --ignore-scrolling --start-hidden --ignore-buttons 1,2,3,4,5,6,7 
 
 # press mod m to disable or enable mouse
 bindsym $mod+m exec xinput | grep 10 | grep floating &> /dev/null && xinput enable 10 || xinput disable 10
