--- a/.config/i3/config
+++ b/.config/i3/config
@@ -84,7 +84,7 @@ bindsym $mod+d kill
 
 
 # start dmenu (a program launcher)
-bindsym $mod+Tab exec --no-startup-id dmenu_run
+bindsym $mod+Tab exec --no-startup-id dmenu_run -fn FiraCode-18
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
