added vim selection and yanking to tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -87,11 +87,9 @@ bind-key -r -T prefix             C-Right               resize-pane -R
 bind-key -r -T prefix             S-Up                  refresh-client -U 10
 bind-key -r -T prefix             S-Down                refresh-client -D 10
 bind-key -r -T prefix             S-Left                refresh-client -L 10
-
-
-
-
-
+bind-key    -T copy-mode-vi 'v' send -X begin-selection     # Begin selection in copy mode.
+bind-key    -T copy-mode-vi 'C-v' send -X rectangle-toggle  # Begin selection in copy mode.
+bind-key    -T copy-mode-vi 'y' send -X copy-selection      # Yank selection in copy mode.
 
 
 #bind H split-window -hc "#{pane_current_path}"
