--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,6 +11,8 @@
 
 set $mod Mod4
 
+client.focused          #800080 #800080 #ffffff #800080  #800080
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 10
